--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -35,10 +35,8 @@
         </div>
         <div class="sign-unit-select">
           <label class="label-require">Người ký: *</label>
-          <select class="form-select" aria-label="Default select example">
-            <option value="3">Phạm Minh Chính</option>
-            <option value="1">Đỗ Thành Dương</option>
-            <option value="2">Phạm Văn Lâm</option>
+          <select class="form-select" aria-label="Default select example" (change)="changePositionSign($event, null, 'name-signature')">
+            <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected" value="{{d.name}}">{{d.name}}</option>
           </select>
         </div>
 
@@ -49,11 +47,11 @@
         <div class="location">
           <div class="location-drag">
             <span class="label">X:</span>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'x')" [ngModel]="objSignInfo.traf_x" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="objSignInfo.traf_x" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
           </div>
           <div class="location-drag">
             <span class="label">Y:</span>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'y')" [ngModel]="objSignInfo.traf_y" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="objSignInfo.traf_y" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
           </div>
         </div>
       </div>
@@ -63,11 +61,11 @@
         <div class="location">
           <div class="location-drag">
             <span class="label" style="font-size: 13px">Chiều dài</span>
-            <input type="number" (ngModelChange)="changeSizeSign($event, 'width')" [ngModel]="signCurent.offsetWidth" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'width', 'size')" [ngModel]="signCurent.offsetWidth" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
           </div>
           <div class="location-drag">
             <span class="label" style="font-size: 13px">Chiều rộng</span>
-            <input type="number" (ngModelChange)="changeSizeSign($event, 'height')" [ngModel]="signCurent.offsetHeight" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'height', 'size')" [ngModel]="signCurent.offsetHeight" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
           </div>
         </div>
       </div>
