--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -24,6 +24,9 @@
             <router-outlet></router-outlet>
           </div>
         </div>
+        <div style="text-align: center; margin: 10px; color:#0160AE">
+          @Copyright 2021 - MobiFone
+        </div>
       </div>
 
   </main>
