--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -567,14 +567,18 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   height: 33px;
   box-sizing: border-box;
   color: white;
-  background-color: #106DB6;
+  background-color: #1487E1;
   font-size: 13px;
 }
 .sub_title{
   padding-left: 35px;
 }
 .sub_title_add{
-  padding-left: 25px;
+  display: inline-block;
+  width: 100%;
+  position: relative;
+  padding: 10px;
+  text-align: center;
 }
 .icon_add{
   padding-right: 5px;
