set id element after drag signature and when click any element signature get try id

--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -35,8 +35,9 @@
         </div>
         <div class="sign-unit-select">
           <label class="label-require">Người ký: *</label>
-          <select class="form-select" aria-label="Default select example" (change)="changePositionSign($event, null, 'name-signature')">
-            <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected" value="{{d.name}}">{{d.name}}</option>
+          <select class="form-select" aria-label="Default select example" (change)="changePositionSign($event, null, 'name-signature')" [disabled]="isEnableSelect">
+            <option value="" hidden>Chọn người ký</option>
+            <option *ngFor="let d of this.list_sign_name, let i = index" [selected]="d.selected" value="{{d.id}}">{{d.name}}</option>
           </select>
         </div>
 
@@ -46,12 +47,12 @@
         <label class="label-require">Vị trí</label>
         <div class="location">
           <div class="location-drag">
-            <span class="label">X:</span>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="objSignInfo.traf_x" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
+            <div class="label" style="text-align: center">X:</div>
+            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="objSignInfo.traf_x" [readOnly]="false">
           </div>
           <div class="location-drag">
-            <span class="label">Y:</span>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="objSignInfo.traf_y" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
+            <div class="label" style="text-align: center">Y:</div>
+            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="objSignInfo.traf_y" [readOnly]="false">
           </div>
         </div>
       </div>
@@ -60,11 +61,11 @@
         <label class="label-require">Kích thước</label>
         <div class="location">
           <div class="location-drag">
-            <span class="label" style="font-size: 13px">Chiều dài</span>
+            <div class="label">Chiều dài</div>
             <input type="number" (ngModelChange)="changePositionSign($event, 'width', 'size')" [ngModel]="signCurent.offsetWidth" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
           </div>
           <div class="location-drag">
-            <span class="label" style="font-size: 13px">Chiều rộng</span>
+            <div class="label">Chiều rộng</div>
             <input type="number" (ngModelChange)="changePositionSign($event, 'height', 'size')" [ngModel]="signCurent.offsetHeight" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="false">
           </div>
         </div>
@@ -84,11 +85,11 @@
              (click)="getSignSelect(d)"
              [ngClass]="changeColorDrag(null,true)"
              [ngStyle]="changePosition(d)">
+          <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
           <div class="sig-img-daky" (click)="onCancel($event, d)">
             <img src="assets/img/clear.svg" alt="">
             <img src="assets/img/border-clear.svg" alt="">
           </div>
-<!--          <img src="assets/img/icons/cancel-sign.svg" (click)="onCancel($event, d)" class="sig-img-daky">-->
           <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
         </div>
       </div>
