--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -101,9 +101,13 @@
           color: #333333;
           border: 1px solid #87CAFF;
           outline: none;
+          &.form-select:disabled {
+            opacity: 0.7;
+          }
         }
 
         select:invalid { color: gray; }
+
       }
     }
 
