--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -177,4 +177,17 @@
   width: 20%;
 }
 
-
+::ng-deep .date-picker  input {
+  display: block !important;
+  width: 100% !important;
+  height: calc(2.25rem + 2px) !important;
+  padding: .375rem .75rem !important;
+  font-size: 1rem !important;
+  line-height: 1.5 !important;
+  color: #495057 !important;
+  background-color: #fff !important;
+  background-clip: padding-box !important;
+  border: 1px solid #ced4da !important;
+  border-radius: .25rem !important;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+}
