--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -84,11 +84,12 @@
 
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
 <div class="container-fluid">
-  <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (stepChange)="getStep()"></app-contract-header>
+<!--  <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (stepChange)="getStep()"></app-contract-header>-->
+  <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"></app-contract-header>
   <ng-container>
-    <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [step]="step"></app-determine-signer>
-    <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step"></app-sample-contract>
-    <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step"></app-infor-contract>
+    <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
+    <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
+    <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
     <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas" [step]="step"></app-confirm-infor-contract>
   </ng-container>
 </div>
