--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1,7 +1,7 @@
 
 <!-- form step 2 -->
 <div>
-  <form [formGroup]="this.datas.userForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <div class="row">
       <div class="col-md-1 order">
           <input type="number" formControlName="order" class="form-control order_input">
@@ -162,7 +162,7 @@
     </div>
   </form>
 
-  <form [formGroup]="this.datas.partners" class="partner_content">
+  <form [formGroup]="partners" class="partner_content">
     <div class="row">
       <div class="col-md-1 order">
           <input type="number" formControlName="order" class="form-control order_input">
@@ -353,8 +353,13 @@
   </form>
 
   <br/>
-  {{this.datas.userForm.value | json}}
+  {{this.userForm.value | json}}
   <br/>
-  {{this.datas.partners.value | json}}
+  {{this.partners.value | json}}
+</div>
+
+<div>
+  <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+  <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
 </div>
 
