--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -73,6 +73,13 @@
       </div>
     </div>
 
+    <hr>
+
+    <div>
+      <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+      <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+    </div>
+
   </div>
 
   <!--  file content-->
